--- a/src/main/asciidoc/reference/reactive-mongo-repositories.adoc
+++ b/src/main/asciidoc/reference/reactive-mongo-repositories.adoc
@@ -161,7 +161,7 @@ The following example shows how to define a `near` query that finds all persons 
 ====
 [source,java]
 ----
-public interface PersonRepository extends ReactiveMongoRepository<Person, String>
+public interface PersonRepository extends ReactiveMongoRepository<Person, String> {
 
   // { 'location' : { '$near' : [point.x, point.y], '$maxDistance' : distance}}
   Flux<Person> findByLocationNear(Point location, Distance distance);
@@ -196,7 +196,7 @@ Spring Data MongoDB supports geo-near queries, as the following example shows:
 
 [source,java]
 ----
-public interface PersonRepository extends ReactiveMongoRepository<Person, String>
+public interface PersonRepository extends ReactiveMongoRepository<Person, String>  {
 
   // {'geoNear' : 'location', 'near' : [x, y] }
   Flux<GeoResult<Person>> findByLocationNear(Point location);
