--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.1.16.RELEASE (2020-02-26)
+----------------------------------------------
+* DATAMONGO-2464 - Fix code examples in reference documentation.
+* DATAMONGO-2459 - Update Documentation of Reactive Repositories to mention usage of PageRequest.
+* DATAMONGO-2457 - Reference documentation: Text does not match with code example.
+* DATAMONGO-2452 - Release 2.1.16 (Lovelace SR16).
+* DATAMONGO-2079 - MappingMongoConverter cannot be proxied because it implements the package-private ValueResolver interface.
+
+
 Changes in version 3.0.0.M3 (2020-02-12)
 ----------------------------------------
 * DATAMONGO-2470 - Adapt tests to AssertJ 3.15.0.
@@ -2903,6 +2912,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
