DATAMONGO-2355 - Refactor Abstract…Configuration classes to avoid need for cglib proxies.
Configuration methods now use parameter injections to avoid the need for cglib subclassing.

--- a/src/main/asciidoc/upgrading.adoc
+++ b/src/main/asciidoc/upgrading.adoc
@@ -37,6 +37,9 @@ Uses `MongoClientSettings` instead of `MongoClientOptions`.
 
 | `ReactiveMongoClientSettingsFactoryBean`
 | Now produces `com.mongodb.MongoClientSettings` instead of `com.mongodb.async.client.MongoClientSettings`
+
+| `AbstractMongoClientConfiguration`, `AbstractReactiveMongoConfiguration`
+| Configuration methods use parameter injection instead of calling local methods to avoid the need for cglib proxies
 |===
 
 .Removed Java API:
