--- a/src/main/asciidoc/reference/mongo-entity-callbacks.adoc
+++ b/src/main/asciidoc/reference/mongo-entity-callbacks.adoc
@@ -16,6 +16,12 @@ Spring Data MongoDB uses the `EntityCallback` API for its auditing support and r
 | Invoked before a domain object is converted to `org.bson.Document`.
 | `Ordered.LOWEST_PRECEDENCE`
 
+| Reactive/AfterConvertCallback
+| `onAfterConvert(T entity, org.bson.Document target, String collection)`
+| Invoked after a domain object is loaded. +
+Can modify the domain object after reading it from a `org.bson.Document`.
+| `Ordered.LOWEST_PRECEDENCE`
+
 | Reactive/AuditingEntityCallback
 | `onBeforeConvert(Object entity, String collection)`
 | Marks an auditable entity _created_ or _modified_
@@ -25,6 +31,12 @@ Spring Data MongoDB uses the `EntityCallback` API for its auditing support and r
 | `onBeforeSave(T entity, org.bson.Document target, String collection)`
 | Invoked before a domain object is saved. +
  Can modify the target, to be persisted, `Document` containing all mapped entity information.
+| `Ordered.LOWEST_PRECEDENCE`
+
+| Reactive/AfterSaveCallback
+| `onAfterSave(T entity, org.bson.Document target, String collection)`
+| Invoked before a domain object is saved. +
+ Can modify the domain object, to be returned after save, `Document` containing all mapped entity information.
 | `Ordered.LOWEST_PRECEDENCE`
 
 |===
