--- a/src/main/asciidoc/reference/mapping.adoc
+++ b/src/main/asciidoc/reference/mapping.adoc
@@ -390,6 +390,64 @@ public class Person {
 IMPORTANT: The `@Id` annotation tells the mapper which property you want to use for the MongoDB `_id` property, and the `@Indexed` annotation tells the mapping framework to call `createIndex(…)` on that property of your document, making searches faster.
 Automatic index creation is only done for types annotated with `@Document`.
 
+[[mapping.index-creation]]
+=== Index Creation
+
+Spring Data MongoDB can automatically create indexes for entity types annotated with `@Document`. Index creation must be explicitly enabled since version 3.0 to prevent undesired effects with collection lifecyle and performance impact. Indexes are automatically created for the initial entity set on application startup and when accessing an entity type for the first time while the application runs.
+
+We generally recommend explicit index creation for application-based control of indexes as Spring Data cannot automatically create indexes for collections that were recreated while the application was running.
+
+`IndexResolver` provides an abstraction for programmatic index definition creation if you want to make use of `@Indexed` annotations such as `@GeoSpatialIndexed`, `@TextIndexed`, `@CompoundIndex`. You can use index definitions with `IndexOperations` to create indexes. A good point in time for index creation is on application startup, specifically after the application context was refreshed, triggered by observing `ContextRefreshedEvent`. This event guarantees that the context is fully initialized. Note that at this time other components, especially bean factories might have access to the MongoDB database.
+
+.Programmatic Index Creation for a single Domain Type
+====
+[source,java]
+----
+class MyListener {
+
+    @EventListener(ContextRefreshedEvent.class)
+    public void initIndicesAfterStartup() {
+
+        MappingContext<? extends MongoPersistentEntity<?>, MongoPersistentProperty> mappingContext = mongoTemplate
+                .getConverter().getMappingContext();
+
+        IndexResolver resolver = new MongoPersistentEntityIndexResolver(mappingContext);
+
+        IndexOperations indexOps = mongoTemplate.indexOps(DomainType.class);
+        resolver.resolveIndexFor(DomainType.class).forEach(indexOps::ensureIndex);
+    }
+}
+----
+====
+
+.Programmatic Index Creation for all Initial Entities
+====
+[source,java]
+----
+class MyListener{
+
+    @EventListener(ContextRefreshedEvent.class)
+    public void initIndicesAfterStartup() {
+
+        MappingContext<? extends MongoPersistentEntity<?>, MongoPersistentProperty> mappingContext = mongoTemplate
+                .getConverter().getMappingContext();
+
+        // consider only entities that are annotated with @Document
+        mappingContext.getPersistentEntities()
+                                    .stream()
+                                    .filter(it -> it.isAnnotationPresent(Document.class))
+                                    .forEach(it -> {
+
+            IndexOperations indexOps = mongoTemplate.indexOps(it.getType());
+            resolver.resolveIndexFor(it.getType()).forEach(indexOps::ensureIndex);
+        });
+    }
+}
+----
+====
+
+Alternatively, if you want to perform index and collection presence before any component is able to access your database from your application, declare a `@Bean` method for `MongoTemplate` and include the code  from above before returning the `MongoTemplate` object.
+
 [NOTE]
 ====
 To turn automatic index creation _ON_ please override `autoIndexCreation()` in your configuration.
@@ -408,9 +466,7 @@ public class Config extends AbstractMongoClientConfiguration {
 ----
 ====
 
-IMPORTANT: Automatic index creation is turned _OFF_ by default as of the release of 3.x.
-We recommend index creation to happen either out of band or as part of the application startup using
-`IndexOperations`.
+IMPORTANT: Automatic index creation is turned _OFF_ by default as of version 3.0.
 
 [[mapping-usage-annotations]]
 === Mapping Annotation Overview
