DATAMONGO-2509 - Add missing Query constructor in reference documentation.
Original pull request: #846.

--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -2161,10 +2161,11 @@ mongoOperations.find<Book>(
 )
 
 mongoOperations.find<Book>(
-  Criteria().andOperator(
-    Book::price gt 5,
-    Book::price lt 10
-  )
+  Query(
+    Criteria().andOperator(
+      Book::price gt 5,
+      Book::price lt 10
+    ))
 )
 
 // Binary operators
