Fix documentation : add missing Query constructor

--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -2122,10 +2122,11 @@ mongoOperations.find<Book>(
 )
 
 mongoOperations.find<Book>(
+Query(
   Criteria().andOperator(
     Book::price gt 5,
     Book::price lt 10
-  )
+  ))
 )
 
 // Binary operators
