--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -349,17 +349,13 @@ public class ApplicationContextEventTestsAppConfig extends AbstractMongoClientCo
   }
 
   @Override
-  @Bean
-  public MongoClient mongoClient() {
+  protected void configureClientSettings(Builder builder) {
 
-  	MongoClientSettings settings = MongoClientSettings.builder()
+  	builder
   	    .credential(MongoCredential.createCredential("name", "db", "pwd".toCharArray()))
   	    .applyToClusterSettings(settings  -> {
   	    	settings.hosts(singletonList(new ServerAddress("127.0.0.1", 27017)));
-  	    })
-  	    .build();
-
-    return MongoClients.create(settings);
+  	    });
   }
 }
 ----
@@ -370,23 +366,6 @@ NOTE: Username and password credentials used in XML-based configuration must be 
 The following example shows encoded credentials:
 `m0ng0@dmin:mo_res:bw6},Qsdxx@admin@database` -> `m0ng0%40dmin:mo_res%3Abw6%7D%2CQsdxx%40admin@database`
 See https://tools.ietf.org/html/rfc3986#section-2.2[section 2.2 of RFC 3986] for further details.
-
-[source,java]
-----
-@Configuration
-public class MongoClientConfiguration extends AbstractMongoClientConfiguration {
-
-	@Override
-	protected String getDatabaseName() {
-		return "database";
-	}
-
-	@Override
-	public MongoClient mongoClient() {
-		return MongoClients.create("mongodb://localhost:27017/?replicaSet=rs0&w=majority");
-	}
-}
-----
 
 [[mongo.mongo-db-factory-xml]]
 === Registering a `MongoDatabaseFactory` Instance by Using XML-based Metadata
@@ -737,6 +716,25 @@ class Person {
 
 Note that the resulting document contains `pers` as the value in the `_class` Field.
 
+[WARNING]
+====
+Type aliases only work if the mapping context is aware of the actual type. The required entity metadata is aquired either on first save or has to be provided via the configurations initial entity set. By default the configuration base package is scanned for potential candidates.
+
+[source,java]
+----
+@Configuration
+public class AppConfig extends AbstractMongoClientConfiguration {
+
+  @Override
+  protected Set<Class<?>> getInitialEntitySet() {
+    return Collections.singleton(Person.class);
+  }
+
+  // ...
+}
+----
+====
+
 ==== Configuring Custom Type Mapping
 
 The following example shows how to configure a custom `MongoTypeMapper` in `MappingMongoConverter`:
@@ -759,11 +757,6 @@ class SampleMongoConfiguration extends AbstractMongoClientConfiguration {
   @Override
   protected String getDatabaseName() {
     return "database";
-  }
-
-  @Override
-  public MongoClient mongoClient() {
-    return MongoClients.create();
   }
 
   @Bean
@@ -935,7 +928,10 @@ Related to performing an `updateFirst` operation, you can also perform an "`upse
 
 [source]
 ----
-template.upsert(query(where("ssn").is(1111).and("firstName").is("Joe").and("Fraizer").is("Update")), update("address", addr), Person.class);
+template.update(Person.class)
+  .matching(query(where("ssn").is(1111).and("firstName").is("Joe").and("Fraizer").is("Update"))
+  .apply(update("address", addr))
+  .upsert();
 ----
 
 WARNING: `upsert` does not support ordering. Please use <<mongo-template.find-and-upsert, findAndModify>> to apply `Sort`.
@@ -960,32 +956,48 @@ The following example inserts a few `Person` objects into the container and perf
 
 [source,java]
 ----
-mongoTemplate.insert(new Person("Tom", 21));
-mongoTemplate.insert(new Person("Dick", 22));
-mongoTemplate.insert(new Person("Harry", 23));
+template.insert(new Person("Tom", 21));
+template.insert(new Person("Dick", 22));
+template.insert(new Person("Harry", 23));
 
 Query query = new Query(Criteria.where("firstName").is("Harry"));
 Update update = new Update().inc("age", 1);
-Person p = mongoTemplate.findAndModify(query, update, Person.class); // return's old person object
 
-assertThat(p.getFirstName(), is("Harry"));
-assertThat(p.getAge(), is(23));
-p = mongoTemplate.findOne(query, Person.class);
-assertThat(p.getAge(), is(24));
+Person oldValue = template.update(Person.class)
+  .matching(query)
+  .apply(update)
+  .findAndModifyValue(); // return's old person object
 
-// Now return the newly updated document when updating
-p = template.findAndModify(query, update, new FindAndModifyOptions().returnNew(true), Person.class);
-assertThat(p.getAge(), is(25));
+assertThat(oldValue.getFirstName(), is("Harry"));
+assertThat(oldValue.getAge(), is(23));
+
+Person newValue = template.query(Person.class)
+  .matching(query)
+  .findOneValue();
+
+assertThat(newValue.getAge(), is(24));
+
+Person newestValue = template.update(Person.class)
+  .matching(query)
+  .apply(update)
+  .withOptions(FindAndModifyOptions.options().returnNew(true)) // Now return the newly updated document when updating
+  .findAndModifyValue();
+
+assertThat(newestValue.getAge(), is(25));
 ----
 
 The `FindAndModifyOptions` method lets you set the options of `returnNew`, `upsert`, and `remove`. An example extending from the previous code snippet follows:
 
 [source,java]
 ----
-Query query2 = new Query(Criteria.where("firstName").is("Mary"));
-p = mongoTemplate.findAndModify(query2, update, new FindAndModifyOptions().returnNew(true).upsert(true), Person.class);
-assertThat(p.getFirstName(), is("Mary"));
-assertThat(p.getAge(), is(1));
+Person upserted = template.update(Person.class)
+  .matching(new Query(Criteria.where("firstName").is("Mary")))
+  .apply(update)
+  .withOptions(FindAndModifyOptions.options().upsert(true).returnNew(true))
+  .findAndModifyValue()
+
+assertThat(upserted.getFirstName(), is("Mary"));
+assertThat(upserted.getAge(), is(1));
 ----
 
 [[mongo-template.aggregation-update]]
@@ -1166,10 +1178,11 @@ Earlier, we saw how to retrieve a single document by using the `findOne` and `fi
 import static org.springframework.data.mongodb.core.query.Criteria.where;
 import static org.springframework.data.mongodb.core.query.Query.query;
 
-…
+// ...
 
-List<Person> result = mongoTemplate.find(query(where("age").lt(50)
-  .and("accounts.balance").gt(1000.00d)), Person.class);
+List<Person> result = template.query(Person.class)
+  .matching(query(where("age").lt(50).and("accounts.balance").gt(1000.00d)))
+  .all();
 ----
 ====
 
@@ -1709,13 +1722,35 @@ db.foo.createIndex(
 )
 ----
 
-A query searching for `coffee cake`, sorted by relevance according to the `weights`, can be defined and executed as follows:
+A query searching for `coffee cake` can be defined and executed as follows:
 
+.Full Text Query
+====
 [source,java]
 ----
-Query query = TextQuery.searching(new TextCriteria().matchingAny("coffee", "cake")).sortByScore();
+Query query = TextQuery
+  .searching(new TextCriteria().matchingAny("coffee", "cake"));
+
 List<Document> page = template.find(query, Document.class);
 ----
+====
+
+To sort results by relevance according to the `weights` use `TextQuery.sortByScore`.
+
+.Full Text Query - Sort by Score
+====
+[source,java]
+----
+Query query = TextQuery
+  .searching(new TextCriteria().matchingAny("coffee", "cake"))
+  .sortByScore() <1>
+  .includeScore(); <2>
+
+List<Document> page = template.find(query, Document.class);
+----
+<1> Use the score property for sorting results by relevance which triggers `.sort({'score': {'$meta': 'textScore'}})`.
+<2> Use `TextQuery.includeScore()` to include the calculated relevance in the resulting `Document`.
+====
 
 You can exclude search terms by prefixing the term with `-` or by using `notMatching`, as shown in the following example (note that the two lines have the same effect and are thus redundant):
 
@@ -1941,6 +1976,8 @@ JsonSchemaProperty.named("birthdate").ofType(Type.dateType());
 JsonSchemaProperty.named("birthdate").with(JsonSchemaObject.of(Type.dateType()).description("Must be a date"));
 ----
 
+The Schema builder also provides support for https://docs.mongodb.com/manual/core/security-client-side-encryption/[Client-Side Field Level Encryption]. Please refer to <<mongo.jsonSchema.encrypted-fields>> for more information,
+
 `CollectionOptions` provides the entry point to schema support for collections, as the following example shows:
 
 .Create collection with `$jsonSchema`
@@ -2155,11 +2192,9 @@ directly there are several methods for those options.
 Query query = query(where("firstname").is("luke"))
     .comment("find luke")         <1>
     .batchSize(100)                                 <2>
-    .slaveOk();                                     <3>
 ----
 <1> The comment propagated to the MongoDB profile log.
 <2> The number of documents to return in each response batch.
-<3> Allows querying a replica slave.
 ====
 
 On the repository level the `@Meta` annotation provides means to add query options in a declarative way.
@@ -2174,6 +2209,35 @@ List<Person> findByFirstname(String firstname);
 
 include::../{spring-data-commons-docs}/query-by-example.adoc[leveloffset=+1]
 include::query-by-example.adoc[leveloffset=+1]
+
+[[mongo.query.count]]
+== Counting Documents
+
+In pre 3.x versions of SpringData MongoDB the count operation was executed against MongoDBs internal collection statistics.
+With the introduction of <<mongo.transactions>> this was no longer possible because statistics would not correctly reflect potential changes during a transaction requiring an aggregation based count approach.
+So in 2.x `MongoOperations.count()` would use the collection statistics if no transaction was in progress, and the aggregation variant if so.
+
+As off Spring Data MongoDB 3.x any `count` operation, may it be with our without a filter query, uses the aggregation based count approach via MongoDBs `countDocuments`.
+
+[NOTE]
+====
+MongoDBs native `countDocuments` method, and the executed `$match` aggregation, does not support `$near` and `$nearSphere` but require `$geoWithin` along with `$center` or `$centerSphere` which does not support `$minDistance` (see https://jira.mongodb.org/browse/SERVER-37043).
+
+Therefore a given `Query` will be rewritten for `count` operations using `Reactive`-/`MongoTemplate` to bypass the issue like shown below.
+
+[source,javascript]
+----
+{ location : { $near : [-73.99171, 40.738868], $maxDistance : 1.1 } } <1>
+{ location : { $geoWithin : { $center: [ [-73.99171, 40.738868], 1.1] } } } <2>
+
+{ location : { $near : [-73.99171, 40.738868], $minDistance : 0.1, $maxDistance : 1.1 } } <3>
+{$and :[ { $nor :[ { location :{ $geoWithin :{ $center :[ [-73.99171, 40.738868 ], 0.01] } } } ]}, { location :{ $geoWithin :{ $center :[ [-73.99171, 40.738868 ], 1.1] } } } ] } <4>
+----
+<1> Count source query using `$near`.
+<2> Rewritten query now using `$geoWithin` with `$center`.
+<3> Count source query using `$near` with `$minDistance` and `$maxDistance`.
+<4> Rewritten query now a combination of `$nor` `$geowithin` critierias to work aournd unsupported `$minDistance`.
+====
 
 [[mongo.mapreduce]]
 == Map-Reduce Operations
@@ -2309,7 +2373,7 @@ Note that you can specify additional limit and sort values on the query, but you
 ====
 https://docs.mongodb.com/master/release-notes/4.2-compatibility/[MongoDB 4.2] removed support for the `eval` command used
 by `ScriptOperations`. +
-There is no replacement for the removed functionallity.
+There is no replacement for the removed functionality.
 ====
 
 MongoDB allows executing JavaScript functions on the server by either directly sending the script or calling a stored one. `ScriptOperations` can be accessed through `MongoTemplate` and provides basic abstraction for `JavaScript` usage. The following example shows how to us the `ScriptOperations` class:
